libqt6c/src/libqfontdialog.hpp

#pragma once
#ifndef SRCC_LIBQFONTDIALOG_HPP
#define SRCC_LIBQFONTDIALOG_HPP

#include <stdbool.h>
#include <stddef.h>

#pragma GCC diagnostic ignored "-Wdeprecated-declarations"

#include "qtlibc.h"

#ifdef __cplusplus
extern "C" {
#endif

#ifdef __cplusplus
#else
typedef struct QActionEvent QActionEvent;
typedef struct QChildEvent QChildEvent;
typedef struct QCloseEvent QCloseEvent;
typedef struct QContextMenuEvent QContextMenuEvent;
typedef struct QDialog QDialog;
typedef struct QDragEnterEvent QDragEnterEvent;
typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEnterEvent QEnterEvent;
typedef struct QEvent QEvent;
typedef struct QFocusEvent QFocusEvent;
typedef struct QFont QFont;
typedef struct QFontDialog QFontDialog;
typedef struct QHideEvent QHideEvent;
typedef struct QInputMethodEvent QInputMethodEvent;
typedef struct QKeyEvent QKeyEvent;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QMouseEvent QMouseEvent;
typedef struct QMoveEvent QMoveEvent;
typedef struct QObject QObject;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QResizeEvent QResizeEvent;
typedef struct QShowEvent QShowEvent;
typedef struct QSize QSize;
typedef struct QTabletEvent QTabletEvent;
typedef struct QTimerEvent QTimerEvent;
typedef struct QVariant QVariant;
typedef struct QWheelEvent QWheelEvent;
typedef struct QWidget QWidget;
#endif

QFontDialog* QFontDialog_new(QWidget* parent);
QFontDialog* QFontDialog_new2();
QFontDialog* QFontDialog_new3(const QFont* initial);
QFontDialog* QFontDialog_new4(const QFont* initial, QWidget* parent);
QMetaObject* QFontDialog_MetaObject(const QFontDialog* self);
void* QFontDialog_Metacast(QFontDialog* self, const char* param1);
int QFontDialog_Metacall(QFontDialog* self, int param1, int param2, void** param3);
void QFontDialog_SetCurrentFont(QFontDialog* self, const QFont* font);
QFont* QFontDialog_CurrentFont(const QFontDialog* self);
QFont* QFontDialog_SelectedFont(const QFontDialog* self);
void QFontDialog_SetOption(QFontDialog* self, int option);
bool QFontDialog_TestOption(const QFontDialog* self, int option);
void QFontDialog_SetOptions(QFontDialog* self, int options);
int QFontDialog_Options(const QFontDialog* self);
void QFontDialog_SetVisible(QFontDialog* self, bool visible);
QFont* QFontDialog_GetFont(bool* ok);
QFont* QFontDialog_GetFont2(bool* ok, const QFont* initial);
void QFontDialog_CurrentFontChanged(QFontDialog* self, const QFont* font);
void QFontDialog_Connect_CurrentFontChanged(QFontDialog* self, intptr_t slot);
void QFontDialog_FontSelected(QFontDialog* self, const QFont* font);
void QFontDialog_Connect_FontSelected(QFontDialog* self, intptr_t slot);
void QFontDialog_ChangeEvent(QFontDialog* self, QEvent* event);
void QFontDialog_Done(QFontDialog* self, int result);
bool QFontDialog_EventFilter(QFontDialog* self, QObject* object, QEvent* event);
void QFontDialog_SetOption2(QFontDialog* self, int option, bool on);
QFont* QFontDialog_GetFont22(bool* ok, QWidget* parent);
QFont* QFontDialog_GetFont3(bool* ok, const QFont* initial, QWidget* parent);
QFont* QFontDialog_GetFont4(bool* ok, const QFont* initial, QWidget* parent, const libqt_string title);
QFont* QFontDialog_GetFont5(bool* ok, const QFont* initial, QWidget* parent, const libqt_string title, int options);
void QFontDialog_OnMetaObject(const QFontDialog* self, intptr_t slot);
QMetaObject* QFontDialog_SuperMetaObject(const QFontDialog* self);
void QFontDialog_OnMetacast(QFontDialog* self, intptr_t slot);
void* QFontDialog_SuperMetacast(QFontDialog* self, const char* param1);
void QFontDialog_OnMetacall(QFontDialog* self, intptr_t slot);
int QFontDialog_SuperMetacall(QFontDialog* self, int param1, int param2, void** param3);
void QFontDialog_OnSetVisible(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperSetVisible(QFontDialog* self, bool visible);
void QFontDialog_OnChangeEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperChangeEvent(QFontDialog* self, QEvent* event);
void QFontDialog_OnDone(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDone(QFontDialog* self, int result);
void QFontDialog_OnEventFilter(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperEventFilter(QFontDialog* self, QObject* object, QEvent* event);
QSize* QFontDialog_SizeHint(const QFontDialog* self);
void QFontDialog_OnSizeHint(const QFontDialog* self, intptr_t slot);
QSize* QFontDialog_SuperSizeHint(const QFontDialog* self);
QSize* QFontDialog_MinimumSizeHint(const QFontDialog* self);
void QFontDialog_OnMinimumSizeHint(const QFontDialog* self, intptr_t slot);
QSize* QFontDialog_SuperMinimumSizeHint(const QFontDialog* self);
void QFontDialog_Open(QFontDialog* self);
void QFontDialog_OnOpen(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperOpen(QFontDialog* self);
int QFontDialog_Exec(QFontDialog* self);
void QFontDialog_OnExec(QFontDialog* self, intptr_t slot);
int QFontDialog_SuperExec(QFontDialog* self);
void QFontDialog_Accept(QFontDialog* self);
void QFontDialog_OnAccept(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperAccept(QFontDialog* self);
void QFontDialog_Reject(QFontDialog* self);
void QFontDialog_OnReject(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperReject(QFontDialog* self);
void QFontDialog_KeyPressEvent(QFontDialog* self, QKeyEvent* param1);
void QFontDialog_OnKeyPressEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperKeyPressEvent(QFontDialog* self, QKeyEvent* param1);
void QFontDialog_CloseEvent(QFontDialog* self, QCloseEvent* param1);
void QFontDialog_OnCloseEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperCloseEvent(QFontDialog* self, QCloseEvent* param1);
void QFontDialog_ShowEvent(QFontDialog* self, QShowEvent* param1);
void QFontDialog_OnShowEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperShowEvent(QFontDialog* self, QShowEvent* param1);
void QFontDialog_ResizeEvent(QFontDialog* self, QResizeEvent* param1);
void QFontDialog_OnResizeEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperResizeEvent(QFontDialog* self, QResizeEvent* param1);
void QFontDialog_ContextMenuEvent(QFontDialog* self, QContextMenuEvent* param1);
void QFontDialog_OnContextMenuEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperContextMenuEvent(QFontDialog* self, QContextMenuEvent* param1);
int QFontDialog_DevType(const QFontDialog* self);
void QFontDialog_OnDevType(const QFontDialog* self, intptr_t slot);
int QFontDialog_SuperDevType(const QFontDialog* self);
int QFontDialog_HeightForWidth(const QFontDialog* self, int param1);
void QFontDialog_OnHeightForWidth(const QFontDialog* self, intptr_t slot);
int QFontDialog_SuperHeightForWidth(const QFontDialog* self, int param1);
bool QFontDialog_HasHeightForWidth(const QFontDialog* self);
void QFontDialog_OnHasHeightForWidth(const QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperHasHeightForWidth(const QFontDialog* self);
QPaintEngine* QFontDialog_PaintEngine(const QFontDialog* self);
void QFontDialog_OnPaintEngine(const QFontDialog* self, intptr_t slot);
QPaintEngine* QFontDialog_SuperPaintEngine(const QFontDialog* self);
bool QFontDialog_Event(QFontDialog* self, QEvent* event);
void QFontDialog_OnEvent(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperEvent(QFontDialog* self, QEvent* event);
void QFontDialog_MousePressEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_OnMousePressEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperMousePressEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_MouseReleaseEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_OnMouseReleaseEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperMouseReleaseEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_MouseDoubleClickEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_OnMouseDoubleClickEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperMouseDoubleClickEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_MouseMoveEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_OnMouseMoveEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperMouseMoveEvent(QFontDialog* self, QMouseEvent* event);
void QFontDialog_WheelEvent(QFontDialog* self, QWheelEvent* event);
void QFontDialog_OnWheelEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperWheelEvent(QFontDialog* self, QWheelEvent* event);
void QFontDialog_KeyReleaseEvent(QFontDialog* self, QKeyEvent* event);
void QFontDialog_OnKeyReleaseEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperKeyReleaseEvent(QFontDialog* self, QKeyEvent* event);
void QFontDialog_FocusInEvent(QFontDialog* self, QFocusEvent* event);
void QFontDialog_OnFocusInEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperFocusInEvent(QFontDialog* self, QFocusEvent* event);
void QFontDialog_FocusOutEvent(QFontDialog* self, QFocusEvent* event);
void QFontDialog_OnFocusOutEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperFocusOutEvent(QFontDialog* self, QFocusEvent* event);
void QFontDialog_EnterEvent(QFontDialog* self, QEnterEvent* event);
void QFontDialog_OnEnterEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperEnterEvent(QFontDialog* self, QEnterEvent* event);
void QFontDialog_LeaveEvent(QFontDialog* self, QEvent* event);
void QFontDialog_OnLeaveEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperLeaveEvent(QFontDialog* self, QEvent* event);
void QFontDialog_PaintEvent(QFontDialog* self, QPaintEvent* event);
void QFontDialog_OnPaintEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperPaintEvent(QFontDialog* self, QPaintEvent* event);
void QFontDialog_MoveEvent(QFontDialog* self, QMoveEvent* event);
void QFontDialog_OnMoveEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperMoveEvent(QFontDialog* self, QMoveEvent* event);
void QFontDialog_TabletEvent(QFontDialog* self, QTabletEvent* event);
void QFontDialog_OnTabletEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperTabletEvent(QFontDialog* self, QTabletEvent* event);
void QFontDialog_ActionEvent(QFontDialog* self, QActionEvent* event);
void QFontDialog_OnActionEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperActionEvent(QFontDialog* self, QActionEvent* event);
void QFontDialog_DragEnterEvent(QFontDialog* self, QDragEnterEvent* event);
void QFontDialog_OnDragEnterEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDragEnterEvent(QFontDialog* self, QDragEnterEvent* event);
void QFontDialog_DragMoveEvent(QFontDialog* self, QDragMoveEvent* event);
void QFontDialog_OnDragMoveEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDragMoveEvent(QFontDialog* self, QDragMoveEvent* event);
void QFontDialog_DragLeaveEvent(QFontDialog* self, QDragLeaveEvent* event);
void QFontDialog_OnDragLeaveEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDragLeaveEvent(QFontDialog* self, QDragLeaveEvent* event);
void QFontDialog_DropEvent(QFontDialog* self, QDropEvent* event);
void QFontDialog_OnDropEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDropEvent(QFontDialog* self, QDropEvent* event);
void QFontDialog_HideEvent(QFontDialog* self, QHideEvent* event);
void QFontDialog_OnHideEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperHideEvent(QFontDialog* self, QHideEvent* event);
bool QFontDialog_NativeEvent(QFontDialog* self, const libqt_string eventType, void* message, intptr_t* result);
void QFontDialog_OnNativeEvent(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperNativeEvent(QFontDialog* self, const libqt_string eventType, void* message, intptr_t* result);
int QFontDialog_Metric(const QFontDialog* self, int param1);
void QFontDialog_OnMetric(const QFontDialog* self, intptr_t slot);
int QFontDialog_SuperMetric(const QFontDialog* self, int param1);
void QFontDialog_InitPainter(const QFontDialog* self, QPainter* painter);
void QFontDialog_OnInitPainter(const QFontDialog* self, intptr_t slot);
void QFontDialog_SuperInitPainter(const QFontDialog* self, QPainter* painter);
QPaintDevice* QFontDialog_Redirected(const QFontDialog* self, QPoint* offset);
void QFontDialog_OnRedirected(const QFontDialog* self, intptr_t slot);
QPaintDevice* QFontDialog_SuperRedirected(const QFontDialog* self, QPoint* offset);
QPainter* QFontDialog_SharedPainter(const QFontDialog* self);
void QFontDialog_OnSharedPainter(const QFontDialog* self, intptr_t slot);
QPainter* QFontDialog_SuperSharedPainter(const QFontDialog* self);
void QFontDialog_InputMethodEvent(QFontDialog* self, QInputMethodEvent* param1);
void QFontDialog_OnInputMethodEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperInputMethodEvent(QFontDialog* self, QInputMethodEvent* param1);
QVariant* QFontDialog_InputMethodQuery(const QFontDialog* self, int param1);
void QFontDialog_OnInputMethodQuery(const QFontDialog* self, intptr_t slot);
QVariant* QFontDialog_SuperInputMethodQuery(const QFontDialog* self, int param1);
bool QFontDialog_FocusNextPrevChild(QFontDialog* self, bool next);
void QFontDialog_OnFocusNextPrevChild(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperFocusNextPrevChild(QFontDialog* self, bool next);
void QFontDialog_TimerEvent(QFontDialog* self, QTimerEvent* event);
void QFontDialog_OnTimerEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperTimerEvent(QFontDialog* self, QTimerEvent* event);
void QFontDialog_ChildEvent(QFontDialog* self, QChildEvent* event);
void QFontDialog_OnChildEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperChildEvent(QFontDialog* self, QChildEvent* event);
void QFontDialog_CustomEvent(QFontDialog* self, QEvent* event);
void QFontDialog_OnCustomEvent(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperCustomEvent(QFontDialog* self, QEvent* event);
void QFontDialog_ConnectNotify(QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_OnConnectNotify(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperConnectNotify(QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_DisconnectNotify(QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_OnDisconnectNotify(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDisconnectNotify(QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_AdjustPosition(QFontDialog* self, QWidget* param1);
void QFontDialog_OnAdjustPosition(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperAdjustPosition(QFontDialog* self, QWidget* param1);
void QFontDialog_UpdateMicroFocus(QFontDialog* self);
void QFontDialog_OnUpdateMicroFocus(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperUpdateMicroFocus(QFontDialog* self);
void QFontDialog_Create(QFontDialog* self);
void QFontDialog_OnCreate(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperCreate(QFontDialog* self);
void QFontDialog_Destroy(QFontDialog* self);
void QFontDialog_OnDestroy(QFontDialog* self, intptr_t slot);
void QFontDialog_SuperDestroy(QFontDialog* self);
bool QFontDialog_FocusNextChild(QFontDialog* self);
void QFontDialog_OnFocusNextChild(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperFocusNextChild(QFontDialog* self);
bool QFontDialog_FocusPreviousChild(QFontDialog* self);
void QFontDialog_OnFocusPreviousChild(QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperFocusPreviousChild(QFontDialog* self);
QObject* QFontDialog_Sender(const QFontDialog* self);
void QFontDialog_OnSender(const QFontDialog* self, intptr_t slot);
QObject* QFontDialog_SuperSender(const QFontDialog* self);
int QFontDialog_SenderSignalIndex(const QFontDialog* self);
void QFontDialog_OnSenderSignalIndex(const QFontDialog* self, intptr_t slot);
int QFontDialog_SuperSenderSignalIndex(const QFontDialog* self);
int QFontDialog_Receivers(const QFontDialog* self, const char* signal);
void QFontDialog_OnReceivers(const QFontDialog* self, intptr_t slot);
int QFontDialog_SuperReceivers(const QFontDialog* self, const char* signal);
bool QFontDialog_IsSignalConnected(const QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_OnIsSignalConnected(const QFontDialog* self, intptr_t slot);
bool QFontDialog_SuperIsSignalConnected(const QFontDialog* self, const QMetaMethod* signal);
void QFontDialog_Delete(QFontDialog* self);

#ifdef __cplusplus
} /* extern C */
#endif

#endif